Adicionando o 'rake gems:build' para compilar extensões nativas em C

--- a/templates/deploy.common.rb.erb
+++ b/templates/deploy.common.rb.erb
@@ -7,7 +7,7 @@ task :before_symlink do
   run "test -d #{release_path}/tmp || mkdir -m 755 #{release_path}/tmp"
   run "test -d #{release_path}/db || mkdir -m 755 #{release_path}/db"
   run "cp #{deploy_to}/etc/database.yml #{release_path}/config/database.yml"
-  run "cd #{release_path} && rake gems:install RAILS_ENV=production && rake db:migrate RAILS_ENV=production"
+  run "cd #{release_path} && rake gems:install RAILS_ENV=production && rake gems:build RAILS_ENV=production && rake db:migrate RAILS_ENV=production"
 end
 
 desc "Garante que as configuracoes estao adequadas"
